:lipstick: Fixing wrapping on 5.5 and 6 star ratings; generally improving design breakpoints

--- a/src/components/content_card/content_card.css
+++ b/src/components/content_card/content_card.css
@@ -42,8 +42,7 @@
 	padding: 0.5rem;
 	background-color: var(--orange);
 	border-radius: 0.5rem;
-	text-align: center;
-	line-height: 1.6em;
+	line-height: 1.6;
 	display: flex;
 	align-items: center;
 	text-align: center;
